[gd_scene load_steps=9 format=3 uid="uid://vdkr2mv6p1bc"]

[ext_resource type="Script" uid="uid://fn7lc23dch61" path="res://Scenes/Games/Platformer/PlatformerGoombaEnemy.gd" id="1_n4los"]
[ext_resource type="Texture2D" uid="uid://cr4nt7hcqocub" path="res://GFX/duck_game.png" id="2_n4los"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wiod"]
size = Vector2(28, 22)

[sub_resource type="Animation" id="Animation_kcagp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_72rhq"]
resource_name = "die"
length = 1.0000033
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 14.4]
}

[sub_resource type="Animation" id="Animation_febry"]
resource_name = "walk"
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_febry"]
_data = {
&"RESET": SubResource("Animation_kcagp"),
&"die": SubResource("Animation_72rhq"),
&"walk": SubResource("Animation_febry")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72rhq"]
size = Vector2(28, 3.5)

[node name="GoombaEnemy" type="CharacterBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_n4los")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_4wiod")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_n4los")
region_enabled = true
region_rect = Rect2(321.95114, 243.81953, 28.136688, 24.396225)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_febry")
}

[node name="RayCastFloorRight" type="RayCast2D" parent="."]
position = Vector2(12, 11)
target_position = Vector2(0, 8)
collision_mask = 2

[node name="RayCastFloorLeft" type="RayCast2D" parent="."]
position = Vector2(-12, 11)
target_position = Vector2(0, 8)
collision_mask = 2

[node name="RayCastWallRight" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(2, 0)
collision_mask = 2

[node name="RayCastWallLeft" type="RayCast2D" parent="."]
position = Vector2(-15, 0)
target_position = Vector2(-2, 0)
collision_mask = 2

[node name="Head" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(0, -11.75)
shape = SubResource("RectangleShape2D_72rhq")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
rect = Rect2(-14, -10, 28, 20)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
